<resources>
    <string name="app_name">Score Board</string>

    <string name="action_settings">Settings</string>
    <string name="nav_dashboard_title">Dashboard</string>
    <string name="open_drawer">Open menu</string>
    <string name="close_drawer">Close menu</string>

    <!--Games name-->
    <string name="game_name_phase_dix">Phase 10</string>
    <string name="game_name_uno">Uno</string>
    <string name="game_name_tarot">Tarot</string>
    <string name="game_name_squash">Squash</string>
    <string name="game_name_scopa">Scopa</string>

    <string name="jacket">jacket</string>
    <string name="action_next">Next</string>
    <string name="action_validate">Validate</string>
    <string name="phase">Phase :</string>
    <string name="points">Points :</string>
    <string name="image_of_game">image of game</string>
    <string name="choose_game">Choose game</string>
    <string name="customize_game">Customize game</string>
    <string name="action_sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="action_add">Add player</string>
    <string name="action_search">Search</string>
    <string name="action_delete_all">Delete all</string>
    <string name="avatar_desc">avatar</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_player">Create player</string>
    <string name="rename">Rename</string>
    <string name="games">Games</string>
    <string name="stats">Stats</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="game_name">Game name</string>
    <string name="match_date">Match date</string>
    <string name="number_of_players">Number of players</string>
    <string name="title_activity_player">Players</string>
    <string name="my_account">My account</string>
    <string name="login_text_btn">Log in</string>
    <string name="signup_text_btn">Sign up</string>
    <string name="signout_text_btn">Sign out</string>
    <string name="skip_login">Skip login</string>
    <string name="prompt_username">Username</string>
    <string name="CLIENT_KEY">v3ldp8zuBRNIBMywlFx2BEWZ1b256SlIERKW097l</string>
    <string name="APP_ID">D4UigXmGn9LFJ9r5tDt9Ndn4KZuW6KBXORD8BNMG</string>
    <string name="PARSE_SERVER_URL">https://server.lunabee.studio:9008/gameScoring/</string>
    <string name="link_forgot_password">Forgot Password</string>
    <string name="link_skip_login">Continue without log in</string>
    <string name="link_sign_up">Create account</string>
    <string name="empty_text_stats">Played games will appear here</string>
    <string name="empty_text_add_players">Start adding your first player</string>

    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="action_manage_player">Manage players</string>
    <string name="action_cancel">Cancel</string>
    <string name="confirm_delete_player_title">Delete player</string>
    <string name="confirm_delete_all_player">Delete all players?</string>
    <string name="delete_all_player_message">You are about to delete all players from your account.</string>
    <string name="choose_player_emptyview_text">You don\'t have any player yet</string>
    <string name="add_points">Add points</string>
    <string name="manage_players_icon">Manage players icon</string>
    <string name="players">Players</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="manage_player_icon">Manage player icon</string>
    <string name="add_player_icon">Add player icon</string>
    <string name="checked_player_icon">Checked player icon</string>
    <string name="finish_game_btn_text">Finish game</string>
    <string name="action_finish_game">Finish game</string>
    <string name="action_edit_user">Edit user</string>
    <string name="prompt_display_name">Display name</string>
    <string name="action_save_user">Save</string>
    <string name="profile_image">Profile image</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="dialog_choose_photo_source_title">Edit Profile Picture</string>
    <string name="confirm_delete_player_body">Delete player %s from your account?</string>
    <string name="player_empty_search_text">No player matching\u0020</string>
    <string name="game_empty_search_text">No game matching\u0020</string>
    <string name="start">start</string>
    <string name="finish">finish</string>
    <string name="exit">Exit</string>
    <string name="discard_finish_dialog_message">Discard or finish game?</string>
    <string name="cancel">cancel</string>
    <string name="discard">discard</string>
    <string name="finish_game_dialog_title">Finish game</string>
    <string name="finish_game_dialog_message">You are about to end the game.</string>
</resources>
