<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="50"
        android:title="@string/action_search"
        android:visible="true"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_add_player"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_all_player"
        android:orderInCategory="100"
        android:title="@string/action_delete_all"
        android:visible="true"
        app:showAsAction="never" />
</menu>