<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="playerListIsEmpty"
            type="Boolean" />

        <variable
            name="addPlayerListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/fragment_padding"
            android:visibility="@{playerListIsEmpty ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_card_manage_player" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{playerListIsEmpty ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/emptyview_square_icon_size"
                android:layout_height="@dimen/emptyview_square_icon_size"
                android:contentDescription="@string/manage_player_icon"
                android:tint="@color/gray"
                app:srcCompat="@drawable/ic_people_outline_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_text_add_players"
                android:textColor="@color/gray" />

            <ImageButton
                android:layout_width="@dimen/small_square_icon_size"
                android:layout_height="@dimen/small_square_icon_size"
                android:layout_marginTop="@dimen/small_padding"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/add_player_icon"
                android:onClick="@{addPlayerListener}"
                android:src="@drawable/ic_add_black_24dp"
                android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
                android:tint="@color/primary" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>