<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.util.List" />

        <import type="remi.scoreboard.data.Player" />

        <!--TODO bind list size instead of whole list-->
        <variable
            name="playerList"
            type="List&lt;Player&gt;" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="@{clickListener}"
        android:orientation="vertical"
        android:padding="@dimen/small_padding">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/square_icon_manage_players_btn"
            android:layout_height="@dimen/square_icon_manage_players_btn"
            android:contentDescription="@string/manage_players_icon"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_people_outline_black_24dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_padding"
            android:text="@string/players"
            android:textColor="@color/black"
            android:textSize="@dimen/manage_player_btn_text_size"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/small_square_icon_size"
            android:layout_height="@dimen/small_square_icon_size"
            android:contentDescription="@string/arrow_icon"
            android:tint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />

        <!--TODO how to format text & remove hardcoded player(s)-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{Integer.toString(playerList.size()) + " player(s)"}'
            android:textColor="@color/gray"
            android:textSize="@dimen/manage_player_btn_subtext_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="12 players" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>