<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="playerListIsEmpty"
            type="Boolean" />

        <variable
            name="searchIsEmpty"
            type="Boolean" />

        <variable
            name="managePlayerListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/fragment_padding"
                android:visibility="@{playerListIsEmpty? View.GONE : View.VISIBLE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_card_choose_player" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <FrameLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_btn_layout_height"
            android:background="@color/white"
            android:elevation="@dimen/bottom_bar_elevation"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/start_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_padding"
                android:text="@string/start" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{playerListIsEmpty ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/emptyview_square_icon_size"
                android:layout_height="@dimen/emptyview_square_icon_size"
                android:tint="@color/gray"
                app:srcCompat="@drawable/ic_people_outline_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/choose_player_emptyview_text"
                android:textColor="@color/gray" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{managePlayerListener}"
                android:padding="@dimen/borderless_btn_padding"
                android:text="@string/action_manage_player"
                android:textColor="@color/colorPrimary"
                android:theme="@style/Base.Widget.AppCompat.Button.Borderless" />
        </LinearLayout>

        <include
            android:id="@+id/included_empty_search_view"
            layout="@layout/empty_search_view"
            android:visibility="@{searchIsEmpty &amp;&amp; !playerListIsEmpty ? View.VISIBLE : View.GONE}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>