<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="match"
            type="remi.scoreboard.data.Match" />

        <import type="java.util.List" />

        <import type="android.view.View" />

        <import type="remi.scoreboard.data.PlayerScore" />

        <variable
            name="playerList"
            type="List&lt;PlayerScore&gt;" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img_game_thumb"
                android:layout_width="@dimen/small_game_thumbnail"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginTop="@dimen/card_margin"
                android:contentDescription="@string/game_name"
                android:visibility="visible"
                app:circleImageFromUrl="@{match.game.thumbnail}"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_margin"
                android:contentDescription="@string/match_date"
                android:textColor="@color/black"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_game_thumb"
                tools:text="16/04/2019" />

            <TextView
                android:id="@+id/text_player_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_spacing"
                android:contentDescription="@string/number_of_players"
                android:text='@{Integer.toString(playerList.size()) + " players"}'
                app:layout_constraintEnd_toEndOf="@+id/text_date"
                app:layout_constraintTop_toBottomOf="@+id/text_date"
                tools:text="5 players" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="@{playerList.size() >= 1 ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="@+id/text_date"
                app:layout_constraintStart_toStartOf="@+id/img_game_thumb"
                app:layout_constraintTop_toBottomOf="@+id/img_game_thumb">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1st"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_first"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/name_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text='@{playerList.size() >= 1 ? playerList.get(0).player.username : ""}'
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    tools:text="Rémi" />

                <TextView
                    android:id="@+id/points_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{playerList.size() >= 1 ? Integer.toString(playerList.get(0).score) + " points" : ""}'
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_first"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="127 points" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="@{playerList.size() >= 2 ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="@+id/text_date"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/img_game_thumb"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2nd"
                    android:textColor="@color/black"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_second"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/name_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text='@{playerList.size() >= 2 ? playerList.get(1).player.username : ""}'
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    tools:text="Bastien" />

                <TextView
                    android:id="@+id/points_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{playerList.size() >= 2 ? Integer.toString(playerList.get(1).score) + " points" : ""}'
                    android:textColor="@color/black"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_second"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="10 points" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:visibility="@{playerList.size() >= 3 ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_date"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/img_game_thumb"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3rd"
                    android:textColor="@color/black"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_third"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/name_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text='@{playerList.size() >= 3 ? playerList.get(2).player.username : ""}'
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    tools:text="Audrey" />


                <TextView
                    android:id="@+id/points_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{playerList.size() >= 3 ? Integer.toString(playerList.get(2).score) + " points" : ""}'
                    android:textColor="@color/black"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_third"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="3 points" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</layout>